[package]
name = "inaturalist-biodiversity"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mutex = "1"
async-recursion = "1"
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
geo = { version = "0.20", features = ["use-serde"] }
geohash = "0.12"
geojson = { version = "0.22.4", features = ["geo-types"] }
governor = "0.4"
inaturalist = "0.2"
lazy_static = "1"
ordered-float = { version = "3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
