[package]
name = "inaturalist-fetch"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-recursion = "1"
futures = "0.3"
geo = "0.23"
geo-ext = { path = "../geo-ext" }
governor = "0.5"
inaturalist = "0.4"
lazy_static = "1"
oauth2 = "4.3.0"
ordered-float = { version = "3", features = ["serde"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
