[package]
name = "inaturalist-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7"
actix = "0.13"
colorous = "1"
egui = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }
eframe = { version = "0.32", features = ["persistence"] }
futures = "0.3"
genawaiter = "0.99"
geo = { version = "0.31", features = ["use-serde"] }
geohash = "0.13"
geojson = { version = "0.24", features = ["geo-types"] }
image = { version = "0.25", features = ["jpeg", "png"] }
inaturalist = "0.8"
inaturalist-fetch = { path = "../inaturalist-fetch" }
inaturalist-oauth = "0.2"
ordered-float = { version = "5", features = ["serde"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
confy = "1.0.0"
opener = "0.8.3"
oauth2 = "4.0.0"

inaturalist-pro-core = { path = "../inaturalist-pro-core" }
inaturalist-pro-ui = { path = "../inaturalist-pro-ui" }
