[package]
name = "inaturalist-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
eframe = { version = "0.32", features = ["persistence"] }
egui = "0.32"
inaturalist = "0.8"
inaturalist-fetch = { path = "../inaturalist-fetch" }
inaturalist-oauth = "0.2"
oauth2 = "4.0.0"
opener = "0.8.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

inaturalist-pro-actors = { path = "../inaturalist-pro-actors" }
inaturalist-pro-config = { path = "../inaturalist-pro-config" }
inaturalist-pro-core = { path = "../inaturalist-pro-core" }
inaturalist-pro-geo = { path = "../inaturalist-pro-geo" }
inaturalist-pro-ui = { path = "../inaturalist-pro-ui" }
