[package]
name = "inaturalist-biodiversity"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7"
actix = "0.13"
colorous = "1"
egui = "0.22"
egui_extras = { version = "0.22", features = ["image"] }
eframe = { version = "0.22", features = ["persistence"] }
futures = "0.3"
genawaiter = "0.99"
geo = { version = "0.25", features = ["use-serde"] }
geohash = "0.13"
geojson = { version = "0.24", features = ["geo-types"] }
image = { version = "0.24", features = ["jpeg", "png"] }
inaturalist= "0.7"
inaturalist-fetch = { path = "../inaturalist-fetch" }
inaturalist-oauth = { path = "../inaturalist-oauth" }
ordered-float = { version = "3", features = ["serde"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
confy = "0.5.1"
